<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>org.elasticsearch</groupId>
  <artifactId>elasticsearch-analysis-rslp</artifactId>
  <packaging>jar</packaging>
  <version>2.0.0</version>
  <name>Elasticsearch RSLP Analysis plugin</name>
  <description>Provides Brazilian Portuguese RSLP stemming support for Elasticsearch</description>
  <inceptionYear>2015</inceptionYear>
  <licenses>
    <license>
      <name>The Apache Software License, Version 2.0</name>
      <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
    </license>
  </licenses>
  <dependencies>
    <dependency>
      <groupId>org.elasticsearch</groupId>
      <artifactId>elasticsearch</artifactId>
      <version>5.0.0</version>
      <scope>compile</scope>
    </dependency>
    <dependency>
      <groupId>org.apache.lucene</groupId>
      <artifactId>lucene-core</artifactId>
      <version>6.2.0</version>
      <scope>compile</scope>
    </dependency>
    <dependency>
      <groupId>org.elasticsearch.test</groupId>
      <artifactId>framework</artifactId>
      <version>5.0.0</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.apache.logging.log4j</groupId>
      <artifactId>log4j-core</artifactId>
      <version>2.6.2</version>
      <scope>test</scope>
    </dependency>
  </dependencies>
  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-jar-plugin</artifactId>
        <version>2.5</version>
        <configuration>
          <archive>
            <manifest>
              <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
            </manifest>
            <manifestEntries>
              <X-Build-Time>${timestamp}</X-Build-Time>
              <X-Compile-Elasticsearch-Version>5.0.0</X-Compile-Elasticsearch-Version>
              <X-Compile-Lucene-Version>6.2.0</X-Compile-Lucene-Version>
              <X-Compile-Source-JDK>1.8</X-Compile-Source-JDK>
              <X-Compile-Target-JDK>1.8</X-Compile-Target-JDK>
            </manifestEntries>
          </archive>
        </configuration>
      </plugin>
      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.3</version>
        <configuration>
          <source>1.8</source>
          <target>1.8</target>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-source-plugin</artifactId>
        <version>2.4</version>
        <executions>
          <execution>
            <id>attach-sources</id>
            <goals>
              <goal>jar</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-assembly-plugin</artifactId>
        <version>2.5.5</version>
        <configuration>
          <appendAssemblyId>false</appendAssemblyId>
          <outputDirectory>${project.build.directory}/releases/</outputDirectory>
          <descriptors>
            <descriptor>${basedir}/plugin-metadata/plugin-assembly.xml</descriptor>
          </descriptors>
        </configuration>
        <executions>
          <execution>
            <phase>package</phase>
            <goals>
              <goal>single</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>2.18.1</version>
        <configuration>
          <skip>true</skip>
        </configuration>
      </plugin>
      <plugin>
        <groupId>com.carrotsearch.randomizedtesting</groupId>
        <artifactId>junit4-maven-plugin</artifactId>
        <version>2.1.16</version>
        <configuration>
          <jvm>${java.home}${file.separator}bin${file.separator}java</jvm>
          <argLine></argLine>
          <heartbeat>10</heartbeat>
          <jvmOutputAction>warn</jvmOutputAction>
          <leaveTemporary>true</leaveTemporary>
          <parallelism>auto</parallelism>
          <assertions enableSystemAssertions="false">
            <enable/>
            <disable package="false"/>
          </assertions>
          <jvmArgs>
            <param>-Xmx512m</param>
            <param>-Xms512m</param>
            <param>-XX:MaxPermSize=128m</param>
            <param>-XX:MaxDirectMemorySize=512m</param>
            <param>-Des.logger.prefix=</param>
            <param>-XX:+HeapDumpOnOutOfMemoryError</param>
            <param>-XX:HeapDumpPath=${project.build.directory}/heapdump/</param>
          </jvmArgs>
          <shuffleOnSlave>true</shuffleOnSlave>
          <sysouts>false</sysouts>
          <seed></seed>
          <uniqueSuiteNames>true</uniqueSuiteNames>
          <systemProperties>
            <java.io.tmpdir>./temp</java.io.tmpdir>
            <tests.bwc></tests.bwc>
            <tests.bwc.path></tests.bwc.path>
            <tests.bwc.version></tests.bwc.version>
            <tests.jvm.argline></tests.jvm.argline>
            <tests.appendseed></tests.appendseed>
            <tests.cluster></tests.cluster>
            <tests.iters></tests.iters>
            <tests.project>${project.groupId}:${project.artifactId}</tests.project>
            <tests.maxfailures></tests.maxfailures>
            <tests.failfast></tests.failfast>
            <tests.class></tests.class>
            <tests.method></tests.method>
            <tests.nightly></tests.nightly>
            <tests.verbose>false</tests.verbose>
            <tests.badapples></tests.badapples>
            <tests.weekly></tests.weekly>
            <haltOnFailure></haltOnFailure>
            <tests.awaitsfix></tests.awaitsfix>
            <tests.timeoutSuite></tests.timeoutSuite>
            <tests.showSuccess></tests.showSuccess>
            <tests.thirdparty></tests.thirdparty>
            <tests.config></tests.config>
            <tests.client.ratio></tests.client.ratio>
            <tests.enable_mock_modules></tests.enable_mock_modules>
            <tests.assertion.disabled>false</tests.assertion.disabled>
            <tests.rest></tests.rest>
            <tests.rest.suite></tests.rest.suite>
            <tests.rest.blacklist></tests.rest.blacklist>
            <tests.rest.spec></tests.rest.spec>
            <tests.network></tests.network>
            <tests.heap.size>512m</tests.heap.size>
            <tests.filter></tests.filter>
            <tests.version>2.0.0</tests.version>
            <tests.locale>random</tests.locale>
            <tests.rest.load_packaged></tests.rest.load_packaged>
            <tests.timezone>random</tests.timezone>
            <es.node.local></es.node.local>
            <es.node.mode></es.node.mode>
            <es.logger.level>ERROR</es.logger.level>
            <tests.security.manager>false</tests.security.manager>
            <tests.compatibility></tests.compatibility>
            <java.awt.headless>true</java.awt.headless>
            <tests.maven>true</tests.maven>
          </systemProperties>
          <listeners>
            <report-text
              showThrowable="true"
              showStackTraces="true"
              showOutput="onerror"
              showStatusOk="false"
              showStatusError="true"
              showStatusFailure="true"
              showStatusIgnored="true"
              showSuiteSummary="true"
              timestamps="false">
              <filtertrace>
                <containsstring contains=".SlaveMain." />
                <containsregex pattern="^(\s+at )(org\.junit\.)" />
                <containsregex pattern="^(\s+at )(com\.carrotsearch\.randomizedtesting.RandomizedRunner)" />
                <containsregex pattern="^(\s+at )(com\.carrotsearch\.randomizedtesting.ThreadLeakControl)" />
                <containsregex pattern="^(\s+at )(com\.carrotsearch\.randomizedtesting.rules\.)" />
                <containsregex pattern="^(\s+at )(org\.apache\.lucene.util\.TestRule)" />
                <containsregex pattern="^(\s+at )(org\.apache\.lucene.util\.AbstractBeforeAfterRule)" />
              </filtertrace>
            </report-text>
          </listeners>
        </configuration>
        <executions>
          <execution>
            <id>tests</id>
            <phase>test</phase>
            <goals>
              <goal>junit4</goal>
            </goals>
            <configuration>
              <ifNoTests>fail</ifNoTests>
              <skipTests>${skipTests}</skipTests>
              <listeners>
                <report-ant-xml mavenExtensions="true"
                  dir="${project.build.directory}/surefire-reports"/>
                <report-execution-times historyLength="20"
                  file="${basedir}/.local-2.0.0-execution-hints.log"/>
              </listeners>
              <balancers>
                <execution-times>
                  <fileset dir="${basedir}" includes=".local-2.0.0-execution-hints.log"/>
                </execution-times>
              </balancers>
              <includes>
                <include>**/*Tests.class</include>
                <include>**/*Test.class</include>
              </includes>
              <excludes>
                <exclude>**/Abstract*.class</exclude>
                <exclude>**/*StressTest.class</exclude>
              </excludes>
            </configuration>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>
</project>
